--- a/COLAB_A_LO_MALDITO.ipynb
+++ b/COLAB_A_LO_MALDITO.ipynb
@@ -31,6 +31,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "562b754d",
+   "metadata": {},
+   "source": [
+    "## 📱 Compatibilidad con iOS/iPadOS (Carnets)\n",
+    "\n",
+    "Este notebook es compatible con la app **Carnets** para iOS/iPadOS.\n",
+    "\n",
+    "**Nota:** La primera celda intenta instalar paquetes. Si usas Carnets:\n",
+    "- ✅ Las librerías principales ya están pre-instaladas\n",
+    "- ⚠️ Puedes comentar o saltar la celda de instalación\n",
+    "- 🔍 Ejecuta la celda de verificación más abajo para confirmar compatibilidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115a14b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 🔍 Celda de Verificación de Compatibilidad\n",
+    "# Ejecuta esto primero en Carnets (iOS/iPadOS) para verificar qué está disponible\n",
+    "\n",
+    "import sys\n",
+    "import platform\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"📱 VERIFICACIÓN DE ENTORNO\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"\\n🐍 Python: {sys.version}\")\n",
+    "print(f\"💻 Plataforma: {platform.platform()}\")\n",
+    "print(f\"📍 Sistema: {platform.system()}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"📦 VERIFICANDO LIBRERÍAS NECESARIAS\")\n",
+    "print(\"=\" * 60 + \"\\n\")\n",
+    "\n",
+    "required_packages = {\n",
+    "    'numpy': 'NumPy',\n",
+    "    'pandas': 'Pandas', \n",
+    "    'matplotlib': 'Matplotlib',\n",
+    "    'seaborn': 'Seaborn',\n",
+    "    'sklearn': 'Scikit-learn',\n",
+    "    'plotly': 'Plotly'\n",
+    "}\n",
+    "\n",
+    "available = []\n",
+    "missing = []\n",
+    "\n",
+    "for module, name in required_packages.items():\n",
+    "    try:\n",
+    "        __import__(module)\n",
+    "        print(f\"✅ {name:15s} - Disponible\")\n",
+    "        available.append(name)\n",
+    "    except ImportError:\n",
+    "        print(f\"❌ {name:15s} - NO disponible\")\n",
+    "        missing.append(name)\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(f\"✅ Disponibles: {len(available)}/{len(required_packages)}\")\n",
+    "if missing:\n",
+    "    print(f\"⚠️  Faltan: {', '.join(missing)}\")\n",
+    "    print(\"\\n💡 Tip: Algunas funcionalidades pueden no estar disponibles\")\n",
+    "else:\n",
+    "    print(\"🎉 ¡Todas las librerías están disponibles!\")\n",
+    "print(\"=\" * 60)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "21bb78b4",
